# linear_regression

./: CMakeLists.txt  README.md
src/App/: App.cpp  App.h
src/App/Graph/: Graph.cpp  Graph.h
src/App/Line/: Line.cpp  Line.h
src/App/LinearRegression/: LinearRegression.cpp  LinearRegression.h
src/App/Point/: Point.cpp  Point.h
